src/snapshots/rlox__parse__tests__floating_expr.snap
---
source: src/parse.rs
expression: "crate::util::mock_interpret(\"1;\")"
---
stdout:


stderr:
Error: Parse error
   ╭─[<unknown>:?:?]
   │
 1 │ 1;
   │ ┬  
   │ ╰── Expected statement
───╯


